<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#303030"
    android:orientation="vertical"
    android:weightSum="20" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal" >

        <ProgressBar
          
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/wifi_activity_headline"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/wifi_searching_note"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF" />

    <ListView
        android:id="@+id/networkIPs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="4" >

        <EditText
            android:id="@+id/editTextIP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/ip_hint"
            android:inputType="textUri"
            android:singleLine="true"
            android:textColor="#FFFFFF" >
        </EditText>

        <EditText
            android:id="@+id/editTextPort"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/port_hint"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/connectWiFiServerBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/wifi_connect_btn"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/bottomAdWiFi"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="4"
        ads:adSize="BANNER"
        ads:adUnitId="@string/wifi_activity_banner_ad" >
    </com.google.android.gms.ads.AdView>

</LinearLayout>